solved the jump issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@ html, body, #root {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: transparent;
+  background-color: #f1f1f1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: transparent;
